# prana

./: .gitignore  Demo.hs  Dockerfile.ghc  Dockerfile.ghc-8.0  README.md  TODO.org  prana-ffi-types.txt  prana.cabal  regenerate.sh  stack.yaml
app/: Main.hs
ghc-8.0/: Main.hs
ghc/ghc-8.0/: Dockerfile
ghc/ghc-8.6/: Dockerfile
prana-base-packages/: Dockerfile.ghc  ghc-stage1.hs
prana-boot/: prana-boot.cabal
prana-compiler/: prana-compiler.cabal
prana-compiler/src/: GhciMonad.hs  InteractiveUI.hs  Main.hs
prana-frontend-plugin/: .gitignore  LICENSE  prana-frontend-plugin.cabal
prana-frontend-plugin/src/Prana/: FrontendPlugin.hs  Types.hs
prana-ghc/: .gitignore  Fib.hs  README.md  prana-ghc.cabal  regenerate.sh  stgdemo.hs
prana-ghc-api/: prana-ghc-api.cabal  test.hs
prana-ghc-api/debug/Prana/: Debug.hs
prana-ghc-api/src/Prana/: FrontendPlugin.hs  Print.hs
prana-ghc/app/: Main.hs
prana-ghc/src/Prana/: Collect.hs  FFI.hs  GHC.hs  Ghc.hs  Index.hs  Mainold.hs  Old.hs  Reconstruct.hs  Rename.hs  Scope.hs
prana-ghc/test/: Main.hs
prana-ghci/: prana-ghci.cabal
prana-ghci/src/: InteractiveUI.hs
prana-ghci/src/Prana/: Compat.hs
prana-interpreter/: README.md  TODO  flag.yaml  prana-interpreter.cabal
prana-interpreter/app/: Main.hs
prana-interpreter/src/: Prana.hs
prana-interpreter/src/Prana/: Interpreter.hs
prana-interpreter/src/Prana/Interpreter/: Binding.hs  Boxing.hs  Eval.hs  PrimOps.hs  TH.hs  Types.hs
prana-interpreter/src/Prana/Interpreter/PrimOps/: TH.hs
prana-interpreter/test/: GHCHarness.hs  Main.hs
prana-interpreter/test/assets/: ArrayLoopTest.hs  ArrayTest.hs  Atan2.hs  CharTest.hs  DoubleTest.hs  FibCodata.hs  FibIterative.hs  Foreign.hs
prana-primops/: prana-primops.cabal
prana-primops/src/: Syntax.hs
prana-primops/src/Prana/: PrimOp.hs  Primops.hs
prana-primops/src/Prana/PrimOp/: Type.hs
prana-types/: README.md  prana-types.cabal  stack.yaml
prana-types/src/Prana/: .#Types.hs  Pretty.hs  Types.hs
scripts/: buildimage.sh  compiledemo.sh  copylibs.sh
src/: Persist.hs  Prana.hs
src/Data/: BinaryDecode.hs
src/Prana/: Decode.hs  Interpret.hs  Types.hs  View.hs
test/: Main.hs  TestLib.hs
