name:                prana
version:             0.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Prana, Prana.Types, Prana.Decode
  build-depends:       base >= 4.7 && < 5,
   bytestring, mtl, containers, binary, ghc-prim, hashable, syb
  default-language:    Haskell2010

executable prana
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , prana, bytestring, binary
  default-language:    Haskell2010

test-suite prana-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , prana
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/prana
