Name: prana-boot
Version: 0
Copyright: XXX
License: BSD3
Category: Development
build-type: Simple
cabal-version: >=1.10

executable prana-ghc
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghc-options:
    -Wall -O2 -threaded -rtsopts +RTS -N -RTS
  hs-source-dirs:
    app/
  build-depends:
    base, process
