name:
  prana-compiler
version:
  0.0.0
synopsis:
  Complete interactive development program for Haskell
license:
  BSD3
homepage:
  https://github.com/commercialhaskell/prana
author:
  Chris Done, The University of Glasgow
maintainer:
  chrisdone@gmail.com
copyright:
  2018 Chris Done,
  2012 Kazu Yamamoto,
  2008 Claus Reinke,
  2005 The University of Glasgow
category:
  Development
build-type:
  Simple
cabal-version:
  >= 1.14
stability:
  Stable
extra-source-files:
  cbits/HsVersions.h
  cbits/PosixSource.h
source-repository head
  type:
    git
  location:
    git://github.com/fpco/prana.git

executable prana-compiler
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghc-options:
    -Wall -O2 -threaded -rtsopts
  include-dirs:
    cbits/
  hs-source-dirs:
    src/
  c-sources:
    cbits/hschooks.c
  cpp-options:
    -DGHCI
  cc-options:
    -fPIC
  other-modules:
    InteractiveUI
    GhciMonad
    Prana.Compat
    Paths_prana_compiler
  build-depends:
    prana-frontend-plugin,
    base < 5,
    array,
    bytestring,
    directory,
    filepath,
    -- We permit any 8.0.1.* or 8.0.2.* or 8.2.1
    ghc >= 7.8 && <= 8.4.3,
    ghc-paths,
    haskeline,
    process,
    transformers,
    syb,
    containers,
    time,
    network,
    random,
    mtl

  if impl(ghc>=8.0.1)
    build-depends:
      ghci,
      ghc-boot-th

  if os(windows)
    build-depends:
      Win32
  else
    build-depends:
      unix
    ghc-options:
      -dynamic
