name:           prana-frontend-plugin
version:        0.0.0
description:    Please see the README on GitHub at <https://github.com/chrisdone/prana#readme>
homepage:       https://github.com/chrisdone/prana#readme
bug-reports:    https://github.com/chrisdone/prana/issues
author:         Chris Done
maintainer:     chrisdone@gmail.com
copyright:      2018 Chris Done
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/chrisdone/prana

library
  ghc-options: -Wall
  exposed-modules:
      Prana.FrontendPlugin
      Prana.Types
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      ghc,
      syb,
      containers,
      bytestring,
      hindent, binary
  default-language: Haskell2010
