name:           prana-ghc
version:        8.4
build-type:     Simple
cabal-version:  >= 1.10

library
  ghc-options:  -O2 -Wall
  exposed-modules:
    Prana.Collect
    Prana.Ghc
    Prana.Index
    Prana.Reconstruct
    Prana.Rename
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      ghc,
      bytestring,
      binary,
      prana-types,
      ghc-paths,
      bytestring,
      validation,
      containers,
      transformers,
      unordered-containers,
      bifunctors,
      mtl,
      semigroupoids,
      directory,
      optparse-applicative,
      async
  default-language: Haskell2010

test-suite prana-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , prana-types
                     , ghc
                     , hspec
                     , ghc-paths, weigh,
      validation, prana-ghc, containers, mtl,
     bytestring, formatting, clock, conduit
  ghc-options:         -Wall -rtsopts -O2
  default-language:    Haskell2010

executable prana-ghc
  default-language:
    Haskell2010
  main-is:
    Main.hs
  ghc-options:
    -Wall -O2 -threaded -rtsopts +RTS -N -RTS
  include-dirs:
    cbits/
  hs-source-dirs:
    app/
  c-sources:
    cbits/hschooks.c
  cc-options:
    -fPIC
  build-depends:
    base < 5,
    array,
    bytestring,
    directory,
    filepath,
    ghc >= 7.8 && <= 8.6.3,
    ghc-paths,
    haskeline,
    process,
    transformers,
    syb,
    containers,
    time,
    network,
    random,
    mtl,
    ghci,
    ghc-boot-th,
    prana-ghc

  if os(windows)
    build-depends:
      Win32
  else
    build-depends:
      unix
    ghc-options:
      -dynamic
