name:           prana-interpreter
version:        0
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      Prana.Interpreter
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      bytestring,
      binary,
      prana-types
  default-language: Haskell2010
