name:           prana-interpreter
version:        0
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      Prana.Interpreter
      Prana.Interpreter.Types
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      bytestring,
      binary,
      prana-types,
      mtl,
      containers
  default-language: Haskell2010

test-suite prana-interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , prana-types
                     , ghc
                     , hspec
                     , ghc-paths, weigh,
      validation, prana-ghc, containers, mtl,
     bytestring, formatting, clock, conduit,       prana-interpreter
  ghc-options:         -Wall -rtsopts -O2
  default-language:    Haskell2010
