name:           prana-types
version:        0
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      Prana.Types
      Prana.Pretty
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      bytestring,
      flat,
      containers,
      prana-primops
  default-language: Haskell2010
